<resources>
    <string name="app_name">VizNet Scanner</string>
    <string name="button_scan">SCAN</string>
    <string name="welcome_text">Hello, Kyle!</string>
    <string name="network_ssid">Network Name (SSID): aRealNetworkName</string>
    <string name="network_ip">Network IP (Address): 192.168.0.1</string>

    <string name="nav_ssid">Name: TellMyWifiLoveHer</string>
    <string name="nav_ip">IP: 192.168.1.23</string>
    <string name="nav_MAC">MAC: B4:0A:6F:94:C3:P0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="phones_tablets">Phones / Tablets</string>
    <string name="favorites">Favorites</string>
    <string name="pcs_servers">PCs / Servers</string>
    <string name="cams_sensors">Cams / Sensors</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="routers">Routers</string>
    <string name="connectedto">Connected to:</string>
    <string name="network">Network</string>

    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="subitem1">subitem1</string>
    <string name="subitem2">subitem2</string>

    <string name="whatis_ip">What is an IP Address?</string>
    <string name="devices_ConnectedTo">Router Connected To:</string>
    <string name="devices_PhonesTablets">Phones / Tablets</string>
    <string name="devices_Favorites">Favorite Devices</string>
    <string name="devices_PCsServers">Computers / Servers</string>
    <string name="devices_CamsSensors">Cameras / Sensors</string>
    <string name="devices_Miscellaneous">Miscellaneous Devices</string>
    <string name="devices_Routers">Routers</string>
    <string name="MAC_address">MAC: b4:0a:6f:94:c3:p0</string>

    <string name="line0">Line0 test text</string>
    <string name="line1">Line1 test text</string>
    <string name="line2">Line2 test text</string>
    <string name="line3">Line3 test text</string>
    <string name="array_image">array_image</string>
    <string name="section_break">Section Break</string>
    <string name="settings">Settings</string>
    <string name="brightness">Brightness</string>
    <string name="nav_header_image">nav_header_image</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="nav_menu">nav_menu</string>
    <string name="about_page_body">In 2019, the Hiscox Cyber Readiness Report (This report gauges how well business are prepared for handling breaches and cyber incidents)1 surveyed 5,400 firms and reported that 3,300 or about 61% reported an attack costing these businesses an average of $369,000. Now this number is huge, but obviously there are going to be some outliers - big businesses with huge losses that will skew the average. But when we take out those outliers, we still get an average loss of $200,000 per business which is almost a 6x increase from 2018’s number of $34,000.
\n\n
In this same report, the number of breaches for small businesses went up from last years 33% to 47% this year. With this increase in the number of breaches you would expect that these small businesses would be much better prepared for data breaches. In 2018, Ponemon Institute2 (institute who conducts research that advances the privacy management practices within business’) surveyed 1,040 people from a variety of industries (Finance, Retailing, Services, etc.) and only 28 percent of the companies represented rated their ability to mitigate threats as “highly effective”.
\n\n
Cyber-attacks are getting more widespread and costing businesses more and more financially. According to Accenture3 (global professional services company who specializes in security), if businesses do not do more to prevent these attacks the total value at risk is $5.2 trillion globally between the years of 2019 and 2023. What do we do to prevent it? One approach is for small business owners to routinely monitor and scan any device that’s on the network.
\n\n
Norbert Nthala (MSU researcher who specializes in information security) 4 et al. found that “prioritizing efforts on critical points in the home network infrastructure and developing appropriate tools to help home users with assessment, protection, monitoring, and incident response is a viable option.” This quote shows the importance of small business owners having an application which will observe the devices on the network and detect any that are not recognizable or have open ports.The issue is this has been done before and done in several different ways (good place to do the device comparison).
\n\n
Wiem Tounsi (PhD from Telecom Bretagne who specializes in cyber security science) et. al. emphasizes the importance of having the organization as a whole be well informed about vulnerabilities in computer networks5 . The problem with these small businesses is that they could easily download a network manager, but in order for them to understand the magnitude of these cyber-attacks we need to educate them and help the small businesses understand what these vulnerabilities look like. This is what our app is about.
        \n\n
 \n\n
        [1] <a href="https://www.hiscox.com/documents/2019-Hiscox-Cyber-Readiness-Report.pdf">2019 Hiscox Cyber Readiness Report</a>\n
        [2] <a href="https://www.keepersecurity.com/assets/pdf/Keeper-2018-Ponemon-Report.pdf">Keeper 2018 Ponemon Report</a>\n
        [3] <a href="https://www.accenture.com/_acnmedia/PDF-96/Accenture-2019-Cost-of-Cybercrime-Study-Final.pdf#zoom=50">Accenture 2019 Cost of Cybercrime Study</a>\n
        [4] <a href="https://www.researchgate.net/publication/324918373_Rethinking_Home_Network_Security">Rethinking Home Network Security</a>\n
        [5] <a href="https://www-sciencedirect-com.ezproxy.library.unlv.edu/science/article/pii/S0167404817301839#s0065">A survey on technical threat intelligence</a>\n

</string>

    <string name="about_back">BACK</string>
    <string name="welcome_to_viznet_network_scanner">Welcome to VizNet Network Scanner</string>

    <string name="string_breakline1">\n </string>
    <string name="string_breakline2">\n </string>


    <!--              IP Address             -->


    <string name="string_whatis_ip_title">What is an "IP address"?</string>
    <string name="string_whatis_ip_body">
         An Internet Protocol (IP) address is a numerical label which represents the address of a device that is connected to a network.\n\n

         This IP address allows a device to be recognized by other devices connected to the network locally (e.g. your home or business WiFi) or to the greater internet.\n\n

         There are two primary types of IP address formats that you will regularly encounter: IPv4 and IPv6.\n\n

         IPv4 was the first implementation of Internet Protocol(IP), so it will be more common to see it.
        However, due to the increasing number of devices connected to the internet globally, IPv6 was created to help address the need for more IP addresses.\n
    </string>

    <string name="string_ipv4_vs_ipv6_title">How to tell IPv4 apart from IPv6:</string>
    <string name="string_ipv4_vs_ipv6_body1">
         The most obvious way to tell the two types apart is by the divider symbol:\n\n
        \t IPv4 uses periods ( . ) to divide the address into sections.\n
        \t IPv6 uses colons  ( : ) to divide the address into sections.\n\n

         Another way to tell is by looking at the values in the address.\n
        \t IPv4 only uses number digits while IPv6 uses both number digits and upper-case letters.\n\n

        \t\t\t Example of an IPv4 address:
    </string>
    <string name="string_ipv4_example">192.168.1.13</string>
    <string name="string_ipv4_vs_ipv6_body2">
        \t\t\t Example of an IPv6 address:
    </string>
    <string name="string_ipv6_example">2602:0445:0000:0000:a93e:5ca7:81e2:5f9d</string>
    <string name="string_howdoeswork_ip_title">How does an IP address work?</string>
    <string name="string_howdoeswork_ip_body">
         IP addresses server two main functions: \n\n
        The first function it servers is as an identification number so that other devices either
        locally on the same network or connected to the internet, can find this device and vice versa. \n\n

         The other purpose it serves is as a way to categorize the device into certain sub categories.
        For example, if the devices is a phone or tablet, a laptop or desktop, a camera or sensor, a router or modem, etc. \n\n
    </string>


    <!--              MAC Address            -->


    <string name="string_whatis_mac_title">What is a "MAC address"?</string>
    <string name="string_whatis_mac_body">
         A Media Access Control (MAC) address works similar to an IP address as its purpose is to uniquely identify a device on the internet as well. \n\n

         However, unlike an IP address which is a logical address of the device, a MAC address is the physical address for that device.
        This means that each device has its unique MAC address which cannot be changed or altered in any way like an IP address can.
        MAC addresses are primarily assigned by the device manufacturer and are often "burned in" to the memory of that device. \n\n

         A MAC address typically contains the manufacturer\'s organizationally unique identifier (OUI) and are then generated according to
        the principles of the Institute of Electrical and Electronics \' (IEEE) Extended Unique Identifiers (EUI). \n\n
    </string>
    <string name="string_howtotell_mac_title">How to identify a MAC address:</string>
    <string name="string_howtotell_mac_body">
        Mac addresses can be identified as 6 groups of two hexadecimal digits,
        meaning it consists of number digits (0-9) and upper case letters (A-F) only.
        Each group of two digits is separated by a hyphen ( - ) or a colon ( : ).\n\n

        \t\t\t Example of a MAC address:
    </string>
    <string name="string_mac_example">B4:0A:6F:94:C3:P0</string>
    <string name="string_howdoeswork_mac_title">How does a MAC address work?</string>
    <string name="string_howdoeswork_mac_body">
         As was mentioned previously, a MAC address is both unique and cannot be changed or altered.
        This is useful in a wireless network such as the one you may be using at home to
        connect your device to your router and thus the internet. \n\n

         In order to prevent strangers from accessing your network as well, the router is programmed
        to accept only specific MAC addresses. This way even if a device\'s IP address changes
        (which is common), the MAC address can be used to help identify your device and allow it to connect to the network. \n\n

         A MAC address can also be used to help limit what a device can and cannot do once it has
        connected to your network (i.e. limit privileges and access). \n\n

         Another way in which a MAC address can be used is to help identify stolen or potentially dangerous devices
        that have connected to the network. Recall that the MAC address is set by the manufacturer
        and will most likely be recorded. So when a device is reported stolen, the manufacturer can
        reach out to the internet and track down networks that this device has been connecting to.
        The manufacturer can also opt to just take away all that device\'s rights, therefore rendering it useless.\n\n
    </string>
</resources>