<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".Main_Scan" >

    <ProgressBar
        android:id="@+id/progressBar_Scan"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:progressDrawable="@drawable/round_pb"
        app:layout_constraintBottom_toBottomOf="@+id/button_scan"
        app:layout_constraintEnd_toEndOf="@+id/button_scan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_scan"
        app:layout_constraintTop_toTopOf="@+id/button_scan" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/round_bg"
        android:onClick="ButtonScan_OnClick"
        android:padding="15dp"
        android:shadowColor="#FFFFFF"
        android:textColor="@color/colorTextBright"
        android:text="@string/button_scan"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/VizNet_welcome"
        app:layout_constraintEnd_toEndOf="@+id/VizNet_welcome"
        app:layout_constraintStart_toStartOf="@+id/VizNet_welcome" />

    <TextView
        android:id="@+id/text_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/network_ssid"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button_scan"
        app:layout_constraintStart_toStartOf="@+id/button_scan"
        app:layout_constraintTop_toBottomOf="@+id/button_scan" />

    <TextView
        android:id="@+id/text_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/network_ip"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/text_ssid"
        app:layout_constraintStart_toStartOf="@+id/text_ssid"
        app:layout_constraintTop_toBottomOf="@+id/text_ssid" />

    <TextView
        android:id="@+id/VizNet_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/welcome_to_viznet_network_scanner"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_scan"
        app:layout_constraintEnd_toEndOf="@+id/button_scan"
        app:layout_constraintStart_toStartOf="@+id/button_scan" />

</androidx.constraintlayout.widget.ConstraintLayout>