<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_device_info"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".Popup_device_info">

    
    <TextView
        android:id="@+id/text_DeviceName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAllWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackground" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@color/colorAllWhite">

                <TextView
                    android:id="@+id/text_device_info_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:text="@string/line0"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_tooltip_ip"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/info_tooltip"
                    android:onClick="Button_Tooltip_IP" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@color/colorAllWhite">

                <TextView
                    android:id="@+id/text_device_info_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:text="@string/line1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_tooltip_mac"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/info_tooltip"
                    android:onClick="Button_Tooltip_MAC"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@color/colorAllWhite">

                <TextView
                    android:id="@+id/text_device_info_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:text="@string/line2"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_tooltip_upload"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/info_tooltip" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@color/colorAllWhite">

                <TextView
                    android:id="@+id/text_device_info_download"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:text="@string/line3"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_tooltip_download"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/info_tooltip" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@color/colorAllWhite">

                <TextView
                    android:id="@+id/text_device_info_usage"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#FFFFFF"
                    android:text="@string/line1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_tooltip_usage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/info_tooltip" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>